# reqstly

./: .env.example  .env.local.example  .gitignore  .ignore  AGENTS.md  CLAUDE.md  README.md
backend/: .dockerignore  Cargo.toml  Dockerfile  package.json  rustfmt.toml
backend/.sqlx/: query-07c30f96f85bace7387ed294cef957b9bae272e49e22888adee2b1392c9f8a3a.json  query-07c834c819b99d1256ef1cd755f67b0ffcb1993761f0cdca516d6ebc98d9094a.json  query-1395429915edeab878957ffc828e10017f59ece951cfce0065fcee6a5c388a8b.json  query-1dbbd02e57bc2ed4d02f9fea68407f8e7b874929dada9c273ab60d788390c976.json  query-280e43657d962921060e82d412c5bf742bfe63ea5ec391ddac14a81ed6c09411.json  query-2bc2ca56765ff156365fdc269a2ed5a7d91fe34f152adaf1d0bee60c116b2550.json  query-3ba87eb78bba7c51bcace152c45d706ee61278f1cd9694066be0ae2d51707b8d.json  query-3ded2bd667f06837157c76a85aa6807859fe500cd106b11b20fc01aafa04738d.json  query-3e3b092d6fa2c9bef2d306eb433609a3ea1b03babc096d09e4375733dc67c4a4.json  query-4928438c0f71e2ec06e83e6c790e7d21fbecc2a5ddb9163088d69b4f1ba9f449.json  query-689f971aa22f2ee530a696d2259eac12e77ac5910839a39f9cac6d792e4c009f.json  query-6c6c6cf8fb3e950569c7179a27593290bccd9571e85ccb50fc4756751a0bf850.json  query-854c2fdf62731c1a210894c4060e2d00db3f1cba6e42d7b82217781b976a67ee.json  query-85bc2dc5684b9bc4d9dbc93a92ea3eed7e43073c1d6020729584dd753ccda1a1.json  query-8847ef95a501d148c51e0620065fc73daf7fee8c72c557626f4382f2594a0fd8.json  query-8afe69bf63d4383f695c5414d68b547a92e0f88cdfd9848673efa764eb466974.json  query-9046d8f5eaed5933171624e8452ff4873db60eb54832fdcd6738b479755e3cd7.json  query-b36df375b6d42fe440556d8229a924dbbc8a28caa5001fcd32e2f27fa7f2f93b.json  query-b776df6e6744c51e67297d584bc5fcb1f8af851c05eaa10854dc32f699e828a0.json  query-bed05cc7b579740a185f539290c0d28da19f82e5b72a3b9c7883f1ae13a7d612.json  query-c6bc3e46079a07f7ca79926f51a75a4ffe5e00be4ca0d497b785c92a0812805c.json  query-cac606539a14dd86538c58d2ec25fdbfdfb7fc5f4d18db1df9e0bca10f9cfcbb.json  query-cb9933ae507c25981a080fb5dfad20247e58f6dffcfbb459e66a0c865d0f1594.json  query-d0b1a87dff28e9fd5904ef9f2e36165eee01f151ee284e47037f5fb6e1d97c27.json  query-d33242fb9829cb71d3af54ac09681a180ebd9a2ef8a1f7287adc100c90e05ea9.json  query-e401576c587786faec76e4e0eed91c0624f383f962ebf76a7df8e238747dafc1.json  query-f9301f9df15e296e577714cf8a1d07d2729faf30ba2be54b7c92787748132a1f.json
backend/migrations/: 001_init.sql  001_initial_schema.sql  002_add_category_to_requests.sql  002_add_password_auth.sql  002_add_session_identity_columns.sql  002_request_participants.sql  003_participant_read_policies.sql  004_user_preferences.sql  20260307220000_base_extensions_and_functions.sql  20260307220100_app_users.sql  20260307220200_requests_and_audit_logs.sql  20260307220300_request_participants.sql  20260307220400_user_preferences.sql  20260307220500_user_password_identities.sql  20260307220600_user_passkey_credentials.sql  20260307220700_webauthn_challenges.sql  20260307220800_user_oidc_identities.sql  20260307220900_auth_events.sql  20260307221000_auth_runtime_hardening.sql
backend/openapi/: openapi.yaml
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  realtime.rs  response.rs  telemetry.rs
backend/src/api/: mod.rs
backend/src/auth/: auth_context.rs  azure.rs  errors.rs  middleware.rs  mod.rs  oidc.rs  passkey.rs  password.rs  rate_limit.rs  repo.rs  routes.rs  (+5 more)
backend/tests/: api_contract.rs  api_hardening.rs  api_integration.rs  api_perf_sanity.rs  auth_passkey_signup.rs
(+134 files in other folders)
