[package]
name = "reqstly_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "uuid", "chrono"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }

# Authentication (for Phase 3)
jsonwebtoken = "9"
bcrypt = "0.15"
openidconnect = { version = "3", features = ["reqwest"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "danger-credential-internals"] }  
webauthn-rs-proto = "0.5"  

# Cookies
tower-cookies = "0.10"

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# HTTP
tower = "0.5"
tower-service = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-layer = "0.3"
futures = "0.3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Cryptography
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenv = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"
