[package]
name = "reqstly_backend"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum-prometheus = "0.6"
thiserror = "2"
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
dotenvy = "0.15"
futures-util = "0.3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
url = "2"
